Fixed navbar button visibility conflict

--- a/static/css/light_mode.css
+++ b/static/css/light_mode.css
@@ -24,7 +24,6 @@ body.light-mode .navbar {
     box-shadow: 0px 4px 20px rgba(0,0,0,0.08);
 }
 
-body.light-mode .navbar a,
 body.light-mode .navbar-brand {
     color: black !important;
 }
@@ -138,7 +137,7 @@ body.light-mode .navbar .btn-logout {
     color: white !important;
 }
 
-body.light-mode .btn-outline-light {
+body.light-mode .navbar .btn-outline-light {
     color: black !important;
     border: 1px solid black !important;
     background: white !important;
